<resources>
    <string name="app_name">the calc</string>

    <string name="zero">0</string>
    <string name="cl">C</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="thee">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">AC</string>
    <string name="mul">X</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="modulus">%</string>
    <string name="speak">speak</string>

    <string name="point">.</string>
    <string name="copy">c</string>



</resources>